Changed GC to ZGC